# tree-sitter-moo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  TESTING.md  grammar.js  nvim.lua  package-lock.json  package.json  pyproject.toml  tree-sitter.json
.github/workflows/: ci.yml  release.yml
bindings/go/: binding_test.go  go.mod
bindings/rust/: lib.rs
docs/: BINDINGS.md  EDITORS.md  USAGE.md
fixtures/: README.md
fixtures/valid/algorithm-patterns/: algorithm-selection-notes.moo  dispatcher-filter-candidates-adapted.moo  dispatcher-prune-expired-gates-adapted.moo  dispatcher-select-shortest-paths-adapted.moo  dispatcher-temporary-gate-adapted.moo  list-bounded-recursive-reverse-adapted.moo  list-compress-runs-adapted.moo  list-extreme-by-length-adapted.moo  list-insertion-sort-permutation-adapted.moo  list-merge-sort-alist-adapted.moo  list-queue-ops-adapted.moo  list-quicksort-property-adapted.moo  list-recursive-flatten-adapted.moo  list-stack-ops-adapted.moo  list-suspended-flatten-adapted.moo  (+26 more)
queries/: highlights.scm
queries/moo/: facts.scm  highlights.scm  tags.scm
scripts/: check-generated.js  import-fixtures.js  smoke-native.js  smoke-package.js  test-c.js  test-go.js  test-python.js  test-rust.js  test-wasm.js  validate-fixtures.js  validate-queries.js  validate-wasm.js
src/: grammar.json  node-types.json  parser.c
test/corpus/: assignments-errors-and-forks.txt  basic.txt  code-facts.txt  control-flow.txt  expressions.txt  toastcore-gaps.txt
test/queries/: sample.moo
(+406 files in other folders)
