[package]
name = "tree-sitter-moo"
description = "Moo grammar for tree-sitter"
version = "0.2.11"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "moo"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/SindomeCorp/tree-sitter-moo"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.25.0"

[build-dependencies]
cc = "1.0.87"
