[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-moo"
description = "Moo grammar for tree-sitter"
version = "0.2.12"
keywords = ["incremental", "parsing", "tree-sitter", "moo"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed"
]
requires-python = ">=3.8"
license = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/SindomeCorp/tree-sitter-moo"

[project.optional-dependencies]
core = ["tree-sitter~=0.25"]

[tool.cibuildwheel]
build = "cp38-*"
build-frontend = "build"
